--- a/pages/about.html
+++ b/pages/about.html
@@ -327,9 +327,7 @@
 								<div class="docs__slide swiper-slide">
 									<div class="docs__slide-wrapper">
 										<p class="docs__slide-title">Патент на&nbsp;юридическую деятельность</p>
-										<picture>
-											<img class="docs__slide-icon" src="../media/content/icons/icon-doc.svg" alt="#" />
-										</picture>
+										<div class="docs__slide-icon icon-doc"></div>
 										<a href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</a>
 									</div>
 								</div>
@@ -337,9 +335,7 @@
 								<div class="docs__slide swiper-slide">
 									<div class="docs__slide-wrapper">
 										<p class="docs__slide-title">Договор-оферта аренды</p>
-										<picture>
-											<img class="docs__slide-icon" src="../media/content/icons/icon-doc.svg" alt="#" />
-										</picture>
+										<div class="docs__slide-icon icon-doc"></div>
 										<a href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</a>
 									</div>
 								</div>
@@ -347,9 +343,7 @@
 								<div class="docs__slide swiper-slide">
 									<div class="docs__slide-wrapper">
 										<p class="docs__slide-title">Договор поставки</p>
-										<picture>
-											<img class="docs__slide-icon" src="../media/content/icons/icon-doc.svg" alt="#" />
-										</picture>
+										<div class="docs__slide-icon icon-doc"></div>
 										<a href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</a>
 									</div>
 								</div>
@@ -357,9 +351,7 @@
 								<div class="docs__slide swiper-slide">
 									<div class="docs__slide-wrapper">
 										<p class="docs__slide-title">Соглашение о&nbsp;конфиденциальности данных</p>
-										<picture>
-											<img class="docs__slide-icon" src="../media/content/icons/icon-doc.svg" alt="#" />
-										</picture>
+										<div class="docs__slide-icon icon-doc"></div>
 										<a href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</a>
 									</div>
 								</div>
@@ -367,9 +359,7 @@
 								<div class="docs__slide swiper-slide">
 									<div class="docs__slide-wrapper">
 										<p class="docs__slide-title">Пользовательское соглашение</p>
-										<picture>
-											<img class="docs__slide-icon" src="../media/content/icons/icon-doc.svg" alt="#" />
-										</picture>
+										<div class="docs__slide-icon icon-doc"></div>
 										<a href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</a>
 									</div>
 								</div>
@@ -377,9 +367,7 @@
 								<div class="docs__slide swiper-slide">
 									<div class="docs__slide-wrapper">
 										<p class="docs__slide-title">Патент на&nbsp;юридическую деятельность</p>
-										<picture>
-											<img class="docs__slide-icon" src="../media/content/icons/icon-doc.svg" alt="#" />
-										</picture>
+										<div class="docs__slide-icon icon-doc"></div>
 										<a href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</a>
 									</div>
 								</div>
@@ -387,9 +375,7 @@
 								<div class="docs__slide swiper-slide">
 									<div class="docs__slide-wrapper">
 										<p class="docs__slide-title">Патент на&nbsp;юридическую деятельность</p>
-										<picture>
-											<img class="docs__slide-icon" src="../media/content/icons/icon-doc.svg" alt="#" />
-										</picture>
+										<div class="docs__slide-icon icon-doc"></div>
 										<a href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</a>
 									</div>
 								</div>
@@ -397,9 +383,7 @@
 								<div class="docs__slide swiper-slide">
 									<div class="docs__slide-wrapper">
 										<p class="docs__slide-title">Патент на&nbsp;юридическую деятельность</p>
-										<picture>
-											<img class="docs__slide-icon" src="../media/content/icons/icon-doc.svg" alt="#" />
-										</picture>
+										<div class="docs__slide-icon icon-doc"></div>
 										<a href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</a>
 									</div>
 								</div>
@@ -407,9 +391,7 @@
 								<div class="docs__slide swiper-slide">
 									<div class="docs__slide-wrapper">
 										<p class="docs__slide-title">Патент на&nbsp;юридическую деятельность</p>
-										<picture>
-											<img class="docs__slide-icon" src="../media/content/icons/icon-doc.svg" alt="#" />
-										</picture>
+										<div class="docs__slide-icon icon-doc"></div>
 										<a href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</a>
 									</div>
 								</div>
@@ -417,9 +399,7 @@
 								<div class="docs__slide swiper-slide">
 									<div class="docs__slide-wrapper">
 										<p class="docs__slide-title">Патент на&nbsp;юридическую деятельность</p>
-										<picture>
-											<img class="docs__slide-icon" src="../media/content/icons/icon-doc.svg" alt="#" />
-										</picture>
+										<div class="docs__slide-icon icon-doc"></div>
 										<a href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</a>
 									</div>
 								</div>
@@ -427,9 +407,7 @@
 								<div class="docs__slide swiper-slide">
 									<div class="docs__slide-wrapper">
 										<p class="docs__slide-title">Патент на&nbsp;юридическую деятельность</p>
-										<picture>
-											<img class="docs__slide-icon" src="../media/content/icons/icon-doc.svg" alt="#" />
-										</picture>
+										<div class="docs__slide-icon icon-doc"></div>
 										<a href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</a>
 									</div>
 								</div>
@@ -437,9 +415,7 @@
 								<div class="docs__slide swiper-slide">
 									<div class="docs__slide-wrapper">
 										<p class="docs__slide-title">Патент на&nbsp;юридическую деятельность</p>
-										<picture>
-											<img class="docs__slide-icon" src="../media/content/icons/icon-doc.svg" alt="#" />
-										</picture>
+										<div class="docs__slide-icon icon-doc"></div>
 										<a href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</a>
 									</div>
 								</div>
