--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 					<li class="header__nav-item" data-hover-text="О компании"><a href="./pages/about.html">о Компании</a></li>
 					<li class="header__nav-item header__nav-item--menu" data-dropdown-open data-hover-text="Услуги"><button>Услуги</button><i class="header__nav-item--icon icon-check-mark"></i></li>
 					<li class="header__nav-item" data-hover-text="Новости"><a href="./pages/news.html">Новости</a></li>
-					<li class="header__nav-item" data-hover-text="Кейсы"><a href="./pages/">Кейсы</a></li>
-					<li class="header__nav-item" data-hover-text="Контакты"><a href="./pages/">Контакты</a></li>
+					<li class="header__nav-item" data-hover-text="Кейсы"><a href="./pages/cases.html">Кейсы</a></li>
+					<li class="header__nav-item" data-hover-text="Контакты"><a href="./pages/contacts.html">Контакты</a></li>
 				</ul>
 				<button class="header__tel" data-form-open data-hover-text="Заказать звонок">8 (846) 555-35-35</button>
 				<div class="header__burger" data-touch-open role="button">
@@ -183,8 +183,8 @@
 					<li class="touch-menu__item"><a href="./pages/about.html">о Компании</a></li>
 					<li class="touch-menu__item"><button data-dropdown-open>Услуги</button><i class="touch-menu__item--icon icon-check-mark"></i></li>
 					<li class="touch-menu__item"><a href="./pages/news.html">Новости</a></li>
-					<li class="touch-menu__item"><a href="./pages/">Кейсы</a></li>
-					<li class="touch-menu__item"><a href="./pages/">Контакты</a></li>
+					<li class="touch-menu__item"><a href="./pages/cases.html">Кейсы</a></li>
+					<li class="touch-menu__item"><a href="./pages/contacts.html">Контакты</a></li>
 					<li class="touch-menu__item"><button data-form-open>Заказать звонок</button></li>
 				</ul>
 			</div>
@@ -686,11 +686,11 @@
 					</a>
 					<ul class="footer__nav" role="navigation">
 						<li class="footer__nav-item"><a href="./pages/about.html">О Компании</a></li>
-						<li class="footer__nav-item"><a href="./pages/">Услуги</a></li>
+						<li class="footer__nav-item"><a href="./pages/service.html">Услуги</a></li>
 						<li class="footer__nav-item"><a href="./pages/news.html">Новости</a></li>
-						<li class="footer__nav-item"><a href="./pages/">Кейсы</a></li>
-						<li class="footer__nav-item"><a href="./pages/">Конструктор документов</a></li>
-						<li class="footer__nav-item"><a href="./pages/">Контакты</a></li>
+						<li class="footer__nav-item"><a href="./pages/cases.html">Кейсы</a></li>
+						<li class="footer__nav-item"><a href="./pages/docs-builder.html">Конструктор документов</a></li>
+						<li class="footer__nav-item"><a href="./pages/contacts.html">Контакты</a></li>
 					</ul>
 					<ul class="footer__connection">
 						<li class="footer__connection-item">
@@ -706,7 +706,7 @@
 				<div class="footer__info">
 					<div class="footer__privacy">TALAN &copy; 2025. Все права защищены</div>
 					<ul class="footer__linksbox">
-						<li class="footer__link"><a target="_blank" href="./pages/">Реквизиты</a></li>
+						<li class="footer__link"><a target="_blank" href="./pages/requisites.html">Реквизиты</a></li>
 						<li class="footer__link"><a target="_blank" href="./pages/privacy-policy.html">Политика конфиденциальности</a></li>
 					</ul>
 					<a href="https://intheplace.ru" class="footer__dev-label">Разработано<img src="./media/services/label.svg" alt="ThePlace" /></a>
