--- a/pages/cases.html
+++ b/pages/cases.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Талан - Юридическая компания</title>
-		<link rel="stylesheet" href="../styles/css/*-page.css" />
+		<title>Талан - Отзывы и успешные кейсы</title>
+		<link rel="stylesheet" href="../styles/css/cases-page.css" />
 		<link rel="stylesheet" href="../media/icon-font/style.css" />
 	</head>
 	<body>
@@ -190,7 +190,169 @@
 			</div>
 		</dialog>
 		<main>
+			<section class="cases">
+				<div class="cases__container">
+					<div class="cases__titlebox">
+						<h1 class="cases__title">Кейсы и отзывы</h1>
+						<div class="cases__desc">
+							<ul class="cases__desc-wrapper">
+								<li class="cases__desc-item">Представленные кейсы — это реальная помощь в налоговых спорах, успешное прохождение проверок, возмещение ущерба и выигранные суды. За 10 лет работы мы помогли сотням клиентов — от&nbsp;владельцев бизнеса до частных лиц, решая сложные юридические вопросы и добиваясь справедливости.</li>
+								<li class="cases__desc-item">Хотите узнать, что говорят клиенты? Читайте реальные отзывы и истории успешных дел в нашей <a class="cases__desc-item--link" target="_blank" href="https://vk.com">группе ВКонтакте</a>.</li>
+							</ul>
+						</div>
+						<ul class="cases__filter">
+							<li class="cases__filter-item active" data-type="all">Все</li>
+							<li class="cases__filter-item" data-type="administrative-lawsuits">Административные иски</li>
+							<li class="cases__filter-item" data-type="antimonopoly">Антимонопольное регулирование</li>
+							<li class="cases__filter-item" data-type="contracts">Договоры</li>
+							<li class="cases__filter-item" data-type="labor-law">Трудовое право</li>
+							<li class="cases__filter-item" data-type="tax-law">Налоговое прво</li>
+							<li class="cases__filter-item" data-type="patents">Паттенты</li>
+						</ul>
+					</div>
+					<div class="cases__body">
+						<ul class="cases__list">
+							<li data-type="administrative-lawsuits">
+								<a class="cases__item" href="../pages/articles/temlate.html">
+									<div class="cases__item-titlebox">
+										<div class="cases__item-title">Снижение налоговой нагрузки на 40% для нефтедобывающей компании</div>
+										<ul class="cases__item-tagsbox">
+											<li class="cases__item-tag">Административное право</li>
+										</ul>
+									</div>
+									<div class="cases__imagebox">
+										<picture class="cases__item-image-wrapper">
+											<img class="cases__item-image" src="../media/content/img/cases/image.jpg" alt="#" />
+										</picture>
+									</div>
+									<div class="cases__item-icon icon-arrow"></div>
+								</a>
+							</li>
 
+							<li data-type="administrative-lawsuits tax-law">
+								<a class="cases__item" href="../pages/articles/temlate.html">
+									<div class="cases__item-titlebox">
+										<div class="cases__item-title">Защита потребителя: возврат денег за некачественный товар</div>
+										<ul class="cases__item-tagsbox">
+											<li class="cases__item-tag">Административное право</li>
+											<li class="cases__item-tag">Налоговое право</li>
+										</ul>
+									</div>
+									<div class="cases__imagebox">
+										<picture class="cases__item-image-wrapper">
+											<img class="cases__item-image" src="../media/content/img/cases/image1.jpg" alt="#" />
+										</picture>
+									</div>
+									<div class="cases__item-icon icon-arrow"></div>
+								</a>
+							</li>
+
+							<li data-type="administrative-lawsuits tax-law">
+								<a class="cases__item" href="../pages/articles/temlate.html">
+									<div class="cases__item-titlebox">
+										<div class="cases__item-title">Снижение налоговой нагрузки на 25%</div>
+										<ul class="cases__item-tagsbox">
+											<li class="cases__item-tag">Административное право</li>
+											<li class="cases__item-tag">Налоговое право</li>
+										</ul>
+									</div>
+									<div class="cases__imagebox">
+										<picture class="cases__item-image-wrapper">
+											<img class="cases__item-image" src="../media/content/img/cases/image2.jpg" alt="#" />
+										</picture>
+									</div>
+									<div class="cases__item-icon icon-arrow"></div>
+								</a>
+							</li>
+
+							<li data-type="tax-law">
+								<a class="cases__item" href="../pages/articles/temlate.html">
+									<div class="cases__item-titlebox">
+										<div class="cases__item-title">Отмена судебного приказа в гражданском производстве</div>
+										<ul class="cases__item-tagsbox">
+											<li class="cases__item-tag">Налоговое право</li>
+										</ul>
+									</div>
+									<div class="cases__imagebox">
+										<picture class="cases__item-image-wrapper">
+											<img class="cases__item-image" src="../media/content/img/cases/image3.jpg" alt="#" />
+										</picture>
+									</div>
+									<div class="cases__item-icon icon-arrow"></div>
+								</a>
+							</li>
+
+							<li data-type="tax-law">
+								<a class="cases__item" href="../pages/articles/temlate.html">
+									<div class="cases__item-titlebox">
+										<div class="cases__item-title">Снижение налоговой нагрузки на 40% для нефтедобывающей компании</div>
+										<ul class="cases__item-tagsbox">
+											<li class="cases__item-tag">Налоговое право</li>
+										</ul>
+									</div>
+									<div class="cases__imagebox">
+										<picture class="cases__item-image-wrapper">
+											<img class="cases__item-image" src="../media/content/img/cases/image4.jpg" alt="#" />
+										</picture>
+									</div>
+									<div class="cases__item-icon icon-arrow"></div>
+								</a>
+							</li>
+
+							<li data-type="administrative-lawsuits">
+								<a class="cases__item" href="../pages/articles/temlate.html">
+									<div class="cases__item-titlebox">
+										<div class="cases__item-title">Защита потребителя: возврат денег за некачественный товар</div>
+										<ul class="cases__item-tagsbox">
+											<li class="cases__item-tag">Административное право</li>
+										</ul>
+									</div>
+									<div class="cases__imagebox">
+										<picture class="cases__item-image-wrapper">
+											<img class="cases__item-image" src="../media/content/img/cases/image5.jpg" alt="#" />
+										</picture>
+									</div>
+									<div class="cases__item-icon icon-arrow"></div>
+								</a>
+							</li>
+
+							<li data-type="tax-law">
+								<a class="cases__item" href="../pages/articles/temlate.html">
+									<div class="cases__item-titlebox">
+										<div class="cases__item-title">Снижение налоговой нагрузки на 25%</div>
+										<ul class="cases__item-tagsbox">
+											<li class="cases__item-tag">Налоговое право</li>
+										</ul>
+									</div>
+									<div class="cases__imagebox">
+										<picture class="cases__item-image-wrapper">
+											<img class="cases__item-image" src="../media/content/img/cases/image6.jpg" alt="#" />
+										</picture>
+									</div>
+									<div class="cases__item-icon icon-arrow"></div>
+								</a>
+							</li>
+
+							<li data-type="administrative-lawsuits">
+								<a class="cases__item" href="../pages/articles/temlate.html">
+									<div class="cases__item-titlebox">
+										<div class="cases__item-title">Отмена судебного приказа в гражданском производстве</div>
+										<ul class="cases__item-tagsbox">
+											<li class="cases__item-tag">Административное право</li>
+										</ul>
+									</div>
+									<div class="cases__imagebox">
+										<picture class="cases__item-image-wrapper">
+											<img class="cases__item-image" src="../media/content/img/cases/image7.jpg" alt="#" />
+										</picture>
+									</div>
+									<div class="cases__item-icon icon-arrow"></div>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
@@ -233,6 +395,6 @@
 		<script src="../js/components/numberMask.js"></script>
 		<script src="../js/components/modals.js"></script>
 		<script src="../js/components/select.js"></script>
-        <script src="../js/pages/news/newsFilter.js"></script>
+		<script src="../js/pages/news/newsFilter.js"></script>
 	</body>
 </html>
