--- a/pages/cases.html
+++ b/pages/cases.html
@@ -212,7 +212,7 @@
 					</div>
 					<div class="cases__body">
 						<ul class="cases__list">
-							<li data-type="administrative-lawsuits">
+							<li class="js-cases-item" data-type="administrative-lawsuits">
 								<a class="cases__item" href="../pages/articles/temlate.html">
 									<div class="cases__item-titlebox">
 										<div class="cases__item-title">Снижение налоговой нагрузки на 40% для нефтедобывающей компании</div>
@@ -229,7 +229,7 @@
 								</a>
 							</li>
 
-							<li data-type="administrative-lawsuits tax-law">
+							<li class="js-cases-item" data-type="administrative-lawsuits tax-law">
 								<a class="cases__item" href="../pages/articles/temlate.html">
 									<div class="cases__item-titlebox">
 										<div class="cases__item-title">Защита потребителя: возврат денег за некачественный товар</div>
@@ -247,7 +247,7 @@
 								</a>
 							</li>
 
-							<li data-type="administrative-lawsuits tax-law">
+							<li class="js-cases-item" data-type="administrative-lawsuits tax-law">
 								<a class="cases__item" href="../pages/articles/temlate.html">
 									<div class="cases__item-titlebox">
 										<div class="cases__item-title">Снижение налоговой нагрузки на 25%</div>
@@ -265,7 +265,7 @@
 								</a>
 							</li>
 
-							<li data-type="tax-law">
+							<li class="js-cases-item" data-type="tax-law">
 								<a class="cases__item" href="../pages/articles/temlate.html">
 									<div class="cases__item-titlebox">
 										<div class="cases__item-title">Отмена судебного приказа в гражданском производстве</div>
@@ -282,7 +282,7 @@
 								</a>
 							</li>
 
-							<li data-type="tax-law">
+							<li class="js-cases-item" data-type="tax-law">
 								<a class="cases__item" href="../pages/articles/temlate.html">
 									<div class="cases__item-titlebox">
 										<div class="cases__item-title">Снижение налоговой нагрузки на 40% для нефтедобывающей компании</div>
@@ -299,7 +299,7 @@
 								</a>
 							</li>
 
-							<li data-type="administrative-lawsuits">
+							<li class="js-cases-item" data-type="administrative-lawsuits">
 								<a class="cases__item" href="../pages/articles/temlate.html">
 									<div class="cases__item-titlebox">
 										<div class="cases__item-title">Защита потребителя: возврат денег за некачественный товар</div>
@@ -316,7 +316,7 @@
 								</a>
 							</li>
 
-							<li data-type="tax-law">
+							<li class="js-cases-item" data-type="tax-law">
 								<a class="cases__item" href="../pages/articles/temlate.html">
 									<div class="cases__item-titlebox">
 										<div class="cases__item-title">Снижение налоговой нагрузки на 25%</div>
@@ -333,7 +333,7 @@
 								</a>
 							</li>
 
-							<li data-type="administrative-lawsuits">
+							<li class="js-cases-item" data-type="administrative-lawsuits">
 								<a class="cases__item" href="../pages/articles/temlate.html">
 									<div class="cases__item-titlebox">
 										<div class="cases__item-title">Отмена судебного приказа в гражданском производстве</div>
@@ -349,6 +349,21 @@
 									<div class="cases__item-icon icon-arrow"></div>
 								</a>
 							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="cases__fog">
+					<div class="cases__fog-layer cases__fog-layer--1"></div>
+					<div class="cases__fog-layer cases__fog-layer--2"></div>
+				</div>
+			</section>
+			<section class="connection">
+				<div class="connection__container">
+					<h2 class="connection__title">Расскажите<br />свою историю</h2>
+					<div class="connection__body">
+						<ul class="connection__body-wrapper">
+							<li class="connection__subtitle">Поделитесь своим опытом работы с Талан и&nbsp;помогите другим людям обрести уверенность в&nbsp;завтрашнем дне</li>
+							<li><button class="connection__button" data-form-open>Написать отзыв<i class="connection__button--icon icon-arrow"></i></button></li>
 						</ul>
 					</div>
 				</div>
@@ -395,6 +410,6 @@
 		<script src="../js/components/numberMask.js"></script>
 		<script src="../js/components/modals.js"></script>
 		<script src="../js/components/select.js"></script>
-		<script src="../js/pages/news/newsFilter.js"></script>
+		<script src="../js/pages/cases/casesFilter.js"></script>
 	</body>
 </html>
