--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Талан - Новости</title>
-		<link rel="stylesheet" href="../styles/css/news-page.css" />
+		<title>Талан - Контакты</title>
+		<link rel="stylesheet" href="../styles/css/contacts-page.css" />
 		<link rel="stylesheet" href="../media/icon-font/style.css" />
 	</head>
 	<body>
@@ -190,113 +190,17 @@
 			</div>
 		</dialog>
 		<main>
-            <section class="news">
-                <div class="news__container">
-                    <div class="news__titlebox">
-                        <h1 class="news__title">Новости</h1>
-                        <ul class="news__tagsbox">
-                            <li class="news__tag active" data-type="all" data-hover-text="Все" role="button" tabindex="0">Все</li>
-                            <li class="news__tag" data-type="laws" data-hover-text="Законы" role="button" tabindex="0">Законы</li>
-                            <li class="news__tag" data-type="insights" data-hover-text="Инсайты" role="button" tabindex="0">Инсайты</li>
-                            <li class="news__tag" data-type="media" data-hover-text="СМИ" role="button" tabindex="0">СМИ</li>
-                            <li class="news__tag" data-type="ivents" data-hover-text="События" role="button" tabindex="0">События</li>
-                            <li class="news__tag" data-type="pro-bono" data-hover-text="pro bono" role="button" tabindex="0">pro bono</li>
-                        </ul>
+            <section class="contacts">
+                <div class="contacts__container">
+                    <h1 class="contacts__title">Контакты</h1>
+                    <div class="contacts__body">
+                        <div class="contacts__titlebox">
+                            <h2 class="contacts__subtitle">Мы защищаем интересы клиентов по&nbsp;всей территории России, так&nbsp;и&nbsp;онлайн</h2>
+                            
+                        </div>
                     </div>
-                    <ul class="news__list">
-
-                        <li class="news__item">
-                            <picture class="news__image-wrapper">
-                                <img class="news__image" src="../media/content/img/cases/case6.jpg" alt="#">
-                            </picture>
-                            <div class="news__contentbox">
-                                <div class="news__item-tag" data-type="ivents">События</div>
-                                <ul class="news__text">
-                                    <li class="news__text-item news__text-item--title">Отмена судебного приказа в гражданском производстве: Неожиданный исход стандартного кейса</li>
-                                    <li class="news__text-item">Бюро TALAN провело детальный аудит налоговых расходов компании и разработало стратегию оптимизации, позволив снизить налоговую нагрузку на 30%. Благодаря оперативным и&nbsp;грамотным решениям клиент смог существенно повысить финансовую стабильность и&nbsp;сосредоточиться на развитии бизнеса.</li>
-                                </ul>
-                                <a class="news__link" href="#">Читать статью <i class="news__link--icon icon-arrow"></i></a>
-                            </div>
-                        </li>
-
-                        <li class="news__item">
-                            <picture class="news__image-wrapper">
-                                <img class="news__image" src="../media/content/img/staff/team2.jpg" alt="#">
-                            </picture>
-                            <div class="news__contentbox">
-                                <div class="news__item-tag" data-type="insights">Инсайт</div>
-                                <ul class="news__text">
-                                    <li class="news__text-item news__text-item--title">Налоговый спор крупного бизнеса</li>
-                                    <li class="news__text-item">Бюро TALAN провело детальный аудит налоговых расходов компании и разработало стратегию оптимизации, позволив снизить налоговую нагрузку на 30%. Благодаря оперативным и грамотным решениям клиент смог существенно повысить финансовую стабильность и сосредоточиться на развитии бизнеса.</li>
-                                </ul>
-                                <a class="news__link" href="#">Читать статью <i class="news__link--icon icon-arrow"></i></a>
-                            </div>
-                        </li>
-
-                        <li class="news__item">
-                            <picture class="news__image-wrapper">
-                                <img class="news__image" src="../media/content/img/cases/case3.jpg" alt="#">
-                            </picture>
-                            <div class="news__contentbox">
-                                <div class="news__item-tag" data-type="insights">Инсайт</div>
-                                <ul class="news__text">
-                                    <li class="news__text-item news__text-item--title">О госпошлине по делам о возмещении ущерба</li>
-                                    <li class="news__text-item">Бюро TALAN провело детальный аудит налоговых расходов компании и разработало стратегию оптимизации, позволив снизить налоговую нагрузку на 30%. Благодаря оперативным и грамотным решениям клиент смог существенно повысить финансовую стабильность и сосредоточиться на развитии бизнеса.</li>
-                                </ul>
-                                <a class="news__link" href="#">Читать статью <i class="news__link--icon icon-arrow"></i></a>
-                            </div>
-                        </li>
-
-                        <li class="news__item">
-                            <picture class="news__image-wrapper">
-                                <img class="news__image" src="../media/content/img/cases/case4.jpg" alt="#">
-                            </picture>
-                            <div class="news__contentbox">
-                                <div class="news__item-tag" data-type="laws">Законы</div>
-                                <ul class="news__text">
-                                    <li class="news__text-item news__text-item--title">Отказ от тура в условиях коронавируса COVID-19</li>
-                                    <li class="news__text-item">Бюро TALAN провело детальный аудит налоговых расходов компании и разработало стратегию оптимизации, позволив снизить налоговую нагрузку на 30%. Благодаря оперативным и грамотным решениям клиент смог существенно повысить финансовую стабильность и сосредоточиться на развитии бизнеса.</li>
-                                </ul>
-                                <a class="news__link" href="#">Читать статью <i class="news__link--icon icon-arrow"></i></a>
-                            </div>
-                        </li>
-
-                        <li class="news__item">
-                            <picture class="news__image-wrapper">
-                                <img class="news__image" src="../media/content/img/cases/case2.jpg" alt="#">
-                            </picture>
-                            <div class="news__contentbox">
-                                <div class="news__item-tag" data-type="pro-bono">Pro bono</div>
-                                <ul class="news__text">
-                                    <li class="news__text-item news__text-item--title">Отмена судебного приказа в гражданском производстве. Неожиданный исход стандартного кейса</li>
-                                    <li class="news__text-item">Бюро TALAN провело детальный аудит налоговых расходов компании и разработало стратегию оптимизации, позволив снизить налоговую нагрузку на 30%. Благодаря оперативным и грамотным решениям клиент смог существенно повысить финансовую стабильность и сосредоточиться на развитии бизнеса.</li>
-                                </ul>
-                                <a class="news__link" href="#">Читать статью <i class="news__link--icon icon-arrow"></i></a>
-                            </div>
-                        </li>
-                        
-                    </ul>
                 </div>
-				<div class="news__fog">
-					<div class="news__fog-layer news__fog-layer--1"></div>
-					<div class="news__fog-layer news__fog-layer--2"></div>
-				</div>
             </section>
-			<section class="connection">
-				<div class="connection__container">
-					<h2 class="connection__title">всегда готовы<br>помочь</h2>
-					<div class="connection__body">
-						<p class="connection__subtitle">Свяжитесь с нами любым удобным для вас способом</p>
-						<ul class="connection__linksbox">
-							<li><a class="connection__link" href="tel:+79999876543" data-hover-text="+7 (999) 987-65-43">+7 (999) 987-65-43</a></li>
-							<li><a class="connection__link" href="mailto:hello@talan.ru" data-hover-text="hello@talan.ru">hello@talan.ru</a></li>
-							<li><a class="connection__link" href="https://web.telegram.org" data-hover-text="telegram">telegram</a></li>
-							<li><a class="connection__link" href="https://vk.com" data-hover-text="vk">vk</a></li>
-						</ul>
-						<button class="connection__button" data-form-open>Написать нам<i class="connection__button--icon icon-arrow"></i></button>
-					</div>
-				</div>
-			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
