--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -190,17 +190,72 @@
 			</div>
 		</dialog>
 		<main>
-            <section class="contacts">
-                <div class="contacts__container">
-                    <h1 class="contacts__title">Контакты</h1>
-                    <div class="contacts__body">
-                        <div class="contacts__titlebox">
-                            <h2 class="contacts__subtitle">Мы защищаем интересы клиентов по&nbsp;всей территории России, так&nbsp;и&nbsp;онлайн</h2>
-                            
-                        </div>
-                    </div>
-                </div>
-            </section>
+			<section class="contacts">
+				<div class="contacts__container">
+					<h1 class="contacts__title">Контакты</h1>
+					<div class="contacts__body">
+						<div class="contacts__infobox">
+							<h2 class="contacts__subtitle">Мы защищаем интересы клиентов по&nbsp;всей территории России, так&nbsp;и&nbsp;онлайн</h2>
+							<ul class="contacts__schedule">
+								<li class="contacts__schedule-item--title">Рабочие часы</li>
+								<li class="contacts__schedule-item">ПН-ПТ: 10:00 – 17:00</li>
+								<li class="contacts__schedule-item">СБ: 12:00 – 16:00</li>
+								<li class="contacts__schedule-item">ВС: Выходной</li>
+							</ul>
+						</div>
+						<div class="contacts__links">
+							<ul class="contacts__item">
+								<li class="contacts__item-title">Электронная почта</li>
+								<li><a class="contacts__item-link" href="mailto:hello@talan.ru" target="_blank">hello@talan.ru</a></li>
+							</ul>
+							<ul class="contacts__item">
+								<li class="contacts__item-title">Телефон</li>
+								<li><a class="contacts__item-link" href="tel:+79999876543">+7 (999) 987-65-43</a></li>
+							</ul>
+							<ul class="contacts__item">
+								<li class="contacts__item-title">Социальные сети</li>
+								<li class="contacts__item-qr">
+									<a href="#">Whatsapp</a>
+									<div class="contacts__item-qr-image-wrapper">
+										<picture>
+											<img class="contacts__item-qr-image" src="../media/services/qr-whatsapp.png" alt="#">
+										</picture>
+										<div class="contacts__item-qr-image-text">@talan</div>
+									</div>
+								</li>
+								<li class="contacts__item-qr">
+									<a href="#">VK</a>
+									<div class="contacts__item-qr-image-wrapper">
+										<picture>
+											<img class="contacts__item-qr-image" src="../media/services/qr-vk.png" alt="#">
+										</picture>
+										<div class="contacts__item-qr-image-text">vk.com/talan</div>
+									</div>
+								</li>
+								<li class="contacts__item-qr">
+									<a href="#">Telegram</a>
+									<div class="contacts__item-qr-image-wrapper">
+										<picture>
+											<img class="contacts__item-qr-image" src="../media/services/qr-tg.png" alt="#">
+										</picture>
+										<div class="contacts__item-qr-image-text">t.me/talan</div>
+									</div>
+								</li>
+								<li class="contacts__item-qr">
+									<a href="#">Instagram</a>
+									<div class="contacts__item-qr-image-wrapper">
+										<picture>
+											<img class="contacts__item-qr-image" src="../media/services/qr-insta.png" alt="#">
+										</picture>
+										<div class="contacts__item-qr-image-text">instagram.com/@talan</div>
+									</div>
+								</li>
+							</ul>
+							<a class="contacts__button" href="requisites.html">Реквизиты<i class="contacts__button--icon icon-arrow"></i></a>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
@@ -243,6 +298,6 @@
 		<script src="../js/components/numberMask.js"></script>
 		<script src="../js/components/modals.js"></script>
 		<script src="../js/components/select.js"></script>
-        <script src="../js/pages/news/newsFilter.js"></script>
+		<script src="../js/pages/news/newsFilter.js"></script>
 	</body>
 </html>
