--- a/pages/requisites.html
+++ b/pages/requisites.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Талан - Юридическая компания</title>
-		<link rel="stylesheet" href="../styles/css/*-page.css" />
+		<link rel="stylesheet" href="../styles/css/requisites-page.css" />
 		<link rel="stylesheet" href="../media/icon-font/style.css" />
 	</head>
 	<body>
@@ -190,7 +190,35 @@
 			</div>
 		</dialog>
 		<main>
-
+			<section class="requisites">
+				<div class="requisites__container">
+					<h1 class="requisites__title">Реквизиты</h1>
+					<div class="requisites__itembox">
+						<ul class="requisites__item">
+							<li class="requisites__item--title">Полное наименование</li>
+							<li class="requisites__item--text">Общество с Ограниченной Ответственностью «TALAN»</li>
+						</ul>
+						<ul class="requisites__item">
+							<li class="requisites__item--title">Юридический адрес</li>
+							<li class="requisites__item--text">Самара, Московское ш., 11/25</li>
+						</ul>
+						<ul class="requisites__item">
+							<li class="requisites__item--title">ОГРН</li>
+							<li class="requisites__item--text">1177746079345</li>
+						</ul>
+						<ul class="requisites__item">
+							<li class="requisites__item--title">ИНН/КПП</li>
+							<li class="requisites__item--text">7702412270/770201001</li>
+						</ul>
+					</div>
+					<div class="requisites__hint">
+						<p class="requisites__hint-text">Отсканируйте QR-код для оплаты банковским приложением или перейдите по&nbsp;<a class="requisites__hint-link" href="#" target="_blank">ссылке</a></p>
+						<picture class="requisites__hint-qr-wrapper">
+							<img class="requisites__hint-qr" src="../media/services/qr-payment.png" alt="qr-код для оплаты" />
+						</picture>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
