--- a/pages/docs-builder.html
+++ b/pages/docs-builder.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Талан - Юридическая компания</title>
-		<link rel="stylesheet" href="../styles/css/*-page.css" />
+		<link rel="stylesheet" href="../styles/css/docs-builder-page.css" />
 		<link rel="stylesheet" href="../media/icon-font/style.css" />
 	</head>
 	<body>
@@ -190,7 +190,24 @@
 			</div>
 		</dialog>
 		<main>
-
+            <section class="alert">
+                <div class="alert__container">
+                    <div class="alert__body">
+                        <h1 class="alert__title">Сервис не доступен...</h1>
+                        <p class="alert__subtitle">Конструктор документов в данный момент находится в разработке. Попробуйте обновить страницу или подпишитесь на&nbsp;обновления, чтобы быть в курсе новостей компании</p>
+                        <form class="alert__form" action="">
+                            <input class="alert__form-input" type="email" placeholder="E-mail" required>
+                            <button class="alert__form-button" type="submit">Подписаться<i class="alert__form-button--icon icon-arrow"></i></button>
+                            <small class="alert__form-privacy">Подписываясь, вы соглашаетесь с&nbsp;условиями&nbsp;<a class="alert__form-privacy--link" href="./privacy-policy.html" target="_blank">политики&nbsp;конфиденциальности</a></small>
+                        </form>
+                    </div>
+                    <div class="alert__imagebox">
+                        <picture class="alert__image-wrapper">
+                            <img class="alert__image" src="../media/services/503-image.svg" alt="#">
+                        </picture>
+                    </div>
+                </div>
+            </section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
