--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -170,7 +170,7 @@
 						<textarea class="modal-form__input modal-form__input--custom" placeholder="Опишите задачу (не обязательно)"></textarea>
 					</div>
 					<div>
-						<p class="modal-form__footnote">Отправляя запрос, вы соглашаетесь с <a class="modal-form__footnote-link" href="./pages/">политикой конфиденциальности</a></p>
+						<p class="modal-form__footnote">Отправляя запрос, вы соглашаетесь с <a class="modal-form__footnote-link" href="./privacy-policy.html">политикой конфиденциальности</a></p>
 						<button class="modal-form__button" type="submit">Отправить запрос<i class="modal-form__button--icon icon-arrow"></i></button>
 					</div>
 				</from>
@@ -303,7 +303,6 @@
 					</a>
 					<ul class="footer__nav" role="navigation">
 						<li class="footer__nav-item"><a href="about.html">О Компании</a></li>
-						<li class="footer__nav-item"><a href="service.html">Услуги</a></li>
 						<li class="footer__nav-item"><a href="news.html">Новости</a></li>
 						<li class="footer__nav-item"><a href="cases.html">Кейсы</a></li>
 						<li class="footer__nav-item"><a href="docs-builder.html">Конструктор документов</a></li>
